fix gapの追加

--- a/components/NewsListItem/index.module.css
+++ b/components/NewsListItem/index.module.css
@@ -21,6 +21,7 @@
 .meta {
     display: flex;
     align-items: center;
+    gap: 1rem;
 }
 
 @media (min-width: 568px) {
